force-app/main/default/objects/maps__TPAlignment__c/fields/maps__SharingAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>maps__SharingAccessLevel__c</fullName>
    <label>Sharing Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Commenter</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>