force-app/main/default/objects/maps__TPAlignment__c/fields/maps__SharingEnabled__c.field-meta.xml
<CustomField>
    <fullName>maps__SharingEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows owners and editors to enable link sharing for Territory Planning Alignments.</description>
    <label>Sharing Enabled</label>
    <type>Checkbox</type>
</CustomField>